--- a/vercel.json
+++ b/vercel.json
@@ -18,5 +18,13 @@
         }
       ]
     }
-  ]
+  ],
+  "build": {
+    "env": {
+      "NODE_OPTIONS": "--openssl-legacy-provider"
+    }
+  }
 }
+
+
+
