--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "btshell",
   "version": "1.0.0",
   "scripts": {
-    "dev": "export NODE_OPTIONS=--openssl-legacy-provider && vuepress dev docs",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && vuepress build docs",
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs",
     "deploy": "bash deploy.sh",
     "updateTheme": "yarn remove vuepress-theme-vdoing && rm -rf node_modules && yarn && yarn add vuepress-theme-vdoing -D",
     "editFm": "node utils/editFrontmatter.js",
